# vocal_insight_ai

./: .gitignore  AGENTS.md  LICENSE  README.md  S4T5_COMPLETION_REPORT.md  pyproject.toml  pyproject.toml.orig  requirements.txt  setup.sh  test_cli_s4t5.py  vocal_insight_ai.py  vocal_insight_cli.py
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-review.yml
doc/: cli_implementation_sample.py  cli_interface_design.md  cli_usecases_migration.md  completion_check_report.md  gitignore_update.md  implementation_report_s4e1.md  issue_workflow.md  lint_report.md  module_architecture.md  pitch_accuracy_analysis_requirements.md  reference_vocal_extraction_requirements.md  s4t4_implementation_plan.md  spec_design_plan.md
issues/: issue_S1T1_refactor_core_logic.md  issue_S1T2_define_core_interface.md  issue_S1T3_implement_unit_tests.md  issue_S3T1_implement_api.md  issue_S3T2_implement_ui.md  issue_S4E1_modularize_feature_pipeline.md  issue_S4S1_modular_core_refactor.md  issue_S4S2_module_aware_cli.md  issue_S4T1_define_feature_module_package.md  issue_S4T2_migrate_existing_feature_functions.md  issue_S4T3_update_core_pipeline_tests.md  issue_S4T4_design_cli_module_interface.md  issue_S4T5_implement_cli_module_dispatch.md  issue_S4T6_update_cli_docs_tests.md  issue_add_ci_tests.md  issue_template.md
issues/completed/: COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_2025.md  (+7 more)
tests/: test_vocal_insight_ai.py  test_vocal_insight_core.py  test_vocal_insight_features.py  test_vocal_insight_segments.py
vocal_insight/: __init__.py
(+11 files in other folders)
